# argus

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.argus/: mcp_clients.json.example
.claude/skills/argus-drive/: SKILL.md
argus/: agent.py  brain.py  cli.py  config.py  dialog_dismisser.py  figma.py  figma_ops.py  figma_via_mcp.py  gherkin.py  grid.py  hands.py  healer.py  logger.py  planner.py  report.py  simulator.py  step_validator.py  toolchain.py
argus/drive/: __init__.py  render.py
argus/mcp/: __init__.py  client.py  server.py
argus/skills/: __init__.py  base.py  color_validator.py  element_marker.py  keyboard_detector.py  layout_checker.py  loading_detector.py  ocr.py  scroll_map.py  smart_crop.py  toast_detector.py  visual_diff.py
tests/_template/: README.md  _accounts.json.example  _preconditions.md
tests/_template/cases/: example.feature
