[project]
name = "argus"
version = "0.1.0"
description = "Vision-based AI Agent that replaces human testers"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "uiautomator2>=3.5,<4",
]

[project.optional-dependencies]
browser = ["selenium>=4.0.0"]

[tool.setuptools.packages.find]
include = ["argus*"]

[project.scripts]
argus = "argus.cli:main"
